--- a/index.html
+++ b/index.html
@@ -10,6 +10,20 @@
     <!--Go to https://console.firebase.google.com-->
     <!--Sign in and add a project "fireMessage"-->
     <!--PASTE SNIPPET HERE-->
+    
+<script src="https://www.gstatic.com/firebasejs/5.3.1/firebase.js"></script>
+<script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyAtvQLXb9UiG_sFE0f7FMBaIWl8m8Ft5J8",
+    authDomain: "firemessage-29007.firebaseapp.com",
+    databaseURL: "https://firemessage-29007.firebaseio.com",
+    projectId: "firemessage-29007",
+    storageBucket: "firemessage-29007.appspot.com",
+    messagingSenderId: "566696791984"
+  };
+  firebase.initializeApp(config);
+</script>
 
 
 
@@ -20,7 +34,7 @@
 <body>
 
     <!--Add your name-->
-    <h1>Bob's Messaging App</h1>
+    <h1>Matt's Messaging App</h1>
 
     <!--This div will be populated with messages-->
     <div class="allMessages">
