--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <h1>Matt's Messaging App</h1>
 
     <!--This div will be populated with messages-->
-    <div class="allMessages">
+    <div class="allMessages" id="allMessages">
         
     </div>
     
